--- a/views/css/style.css
+++ b/views/css/style.css
@@ -57,8 +57,8 @@
 .btn-mex{
     background-color: #00a8a5;
     color:#fff;
-    border-radius: 3rem;
-    padding: 0.6rem 3rem;
+    /* border-radius: 3rem; */
+    /* padding: 0.6rem 3rem; */
     /* margin-bottom: 2rem; */
 }
 
